{
    "name": "GUIInputs",
    "maps": [
        {
            "name": "PlayerUI",
            "id": "6fc2c0ab-56e7-4e11-b895-72b99eb33ade",
            "actions": [
                {
                    "name": "HotbarNumbers",
                    "type": "Button",
                    "id": "314c2d44-5bd9-424f-888d-809284fcfdb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HotbarMouseScroll",
                    "type": "PassThrough",
                    "id": "dd6ca3a4-d705-4a84-aff3-b7346fbc012d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5cf93533-cae8-4d34-a807-82d22da5ffab",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "HotbarNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de760199-45fa-41ca-abe7-88657ab91afa",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "HotbarNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bb00f6c-7f07-4dd9-98d1-e480303aeecf",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "HotbarNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3567c38f-fcea-447c-96f7-568cbe4e71fc",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "HotbarNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6870c137-1f41-44a2-a2b2-902a7d4da8ad",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "Scale(factor=5)",
                    "groups": "",
                    "action": "HotbarNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c5868aa-bb21-4e22-b99d-d29eeda05e7b",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "Scale(factor=6)",
                    "groups": "",
                    "action": "HotbarNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b93c7909-b782-4d8a-85a2-e92299a2c91e",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "Scale(factor=7)",
                    "groups": "",
                    "action": "HotbarNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92ea9f00-e5ed-4ce2-901c-1301d39aa4f6",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "Scale(factor=8)",
                    "groups": "",
                    "action": "HotbarNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b9ffa1a-5901-4ae7-987d-f6f8b6aa4ee8",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "Scale(factor=9)",
                    "groups": "",
                    "action": "HotbarNumbers",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9460d9e-ac2b-4cb5-a56a-94deb1ae623a",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HotbarMouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}